crates/vize_patina/src/rules/script/no_options_api/snapshots/vize_patina__rules__script__no_options_api__tests__component_metadata_only_still_errors.snap
---
source: crates/vize_patina/src/rules/script/no_options_api.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/no-options-api",
        severity: Error,
        message: "Options API component declarations are not supported",
        start: 16,
        end: 66,
        help: Some(
            "Use <script setup> with Composition API. Move props/emits to defineProps()/defineEmits(), lifecycle options to onMounted()/onUnmounted(), and component metadata to defineOptions() when needed.",
        ),
        labels: [
            Label {
                message: "component option 'name'",
                start: 20,
                end: 24,
            },
            Label {
                message: "component option 'inheritAttrs'",
                start: 45,
                end: 57,
            },
        ],
        fix: None,
    },
]
