crates/vize_patina/src/rules/script/no_options_api/snapshots/vize_patina__rules__script__no_options_api__tests__invalid_cdn_create_app_options.snap
---
source: crates/vize_patina/src/rules/script/no_options_api.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/no-options-api",
        severity: Error,
        message: "Options API component declarations are not supported",
        start: 15,
        end: 57,
        help: Some(
            "Use <script setup> with Composition API. Move props/emits to defineProps()/defineEmits(), lifecycle options to onMounted()/onUnmounted(), and component metadata to defineOptions() when needed.",
        ),
        labels: [
            Label {
                message: "data() option (use ref()/reactive())",
                start: 19,
                end: 23,
            },
        ],
        fix: None,
    },
]
